--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -29,7 +29,7 @@ html {
 body {
     font-family: 'Helvetica Neue',Helvetica,Arial,'Microsoft YaHei',sans-serif;
     color: #333;
-    background-image: url(https://gw.alicdn.com/tfs/TB1xzbUumBYBeNjy0FeXXbnmFXa-125-121.png);
+    background-image: url(https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=268213225,3054029020&fm=26&gp=0.jpg);
     position: relative;
     min-height: 100%;
     padding-bottom: 190px;
