回滚为原来的样式

--- a/_includes/backToTop.html
+++ b/_includes/backToTop.html
@@ -3,3 +3,5 @@
         <i class="fa fa-arrow-up" aria-hidden="true"></i>
     </a>
 </div>
+
+<!--#496595 ,  #8fa7c3 ,#8fa7c3  ,#ecedef , #d4cfaf-->
