--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -6,9 +6,9 @@
 
     text-align: center;
     // margin-top: 50px;
-    background-color: #714414b3;
+    background-color: #2b2b3c;
     box-shadow: 0 -2px 4px 1px rgba(0,0,0,0.5);
-    color: #c1c1c1f0;
+    color: #bbb;
     .wrapper {
         width: 1140px;
         margin: 0 auto;
@@ -38,7 +38,7 @@
         }
         .power {
             a {
-                color: #5eb355;
+                color: #8F90C5;
                 transition: 0.3s ease;
                 &:hover {
                     color: #fff;
